--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
-    name: Run Unit Tests and Instrumented Tests
+  unit_test:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -19,8 +19,19 @@ jobs:
           java-version: 1.8
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
-      - name: Instrumented tests
-        run: bash ./gradlew connectedAndroidTest --stacktrace
+
+  instrumented_test:
+    name: Run Instruemented Tests
+    runs-on: macos-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v2
+
+    - name: run tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 29
+        script: ./gradlew connectedCheck --stacktrace
 
   apk:
     name: Generate APK
